# dsp_tools

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_flags.txt  requirements.txt
csv_files/: common.py  generate_csv.py  plot_csv.py
examples/dft/: save_mag.c
examples/python/: cepstrum.ipynb  generate_csv.py  plot_csv.py  sin_cos_sum.ipynb  sin_cos_transform.ipynb
examples/vector_csv/: print_csv.c
include/: csv_parser.h  fourier.h  vector_complex.h  vector_csv.h
python_dsp_tools/: __init__.py  csv_file.py  signal.py
src/: csv_parser.c  fourier.c  main.c  vector_complex.c  vector_csv.c
tests/: print_and_save.c
tests/vector_csv/: save_csv.c
